# inverted-pendulum-stm-FreeRTOS-app

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  LIP_app_1.ioc  LIP_app_1.launch  OLD_MAIN_LIP  README.md  cmake_config.sh  gcc-arm-none-eabi.cmake  makefile  readme.md  readme.txt
Core/Inc/: adc.h  main.h  stm32f4xx_it.h
Core/Src/: adc.c  gpio.c  main.c  stm32f4xx_it.c  tim.c  usart.c
FreeRTOS-CLI/: FreeRTOS_CLI.c
LIP/: TODO.LOL.md  readme.txt
LIP/as5600_driver/example/: driver_as5600_basic.c  driver_as5600_basic.h
LIP/as5600_driver/interface/: driver_as5600_interface.h  stm32f429_driver_as5600_interface.c
LIP/as5600_driver/src/: driver_as5600.c  driver_as5600.h
LIP/as5600_driver/test/: driver_as5600_read_test.c  driver_as5600_read_test.h  driver_as5600_register_test.c  driver_as5600_register_test.h
LIP/include/: FIR_filter.h  FreeRTOSConfig.h  IIR_filter.h  LIP_tasks_common.h  LP_filter.h  SP_filter.h  com_driver.h  dcm_encoder_driver.h  encoder_driver.h  filters_coeffs.h  limit_switch_driver.h  main_LIP.h  motor_driver.h  pend_enc_driver.h
LIP/source/: FIR_filter.c  IIR_filter.c  LIP_bounceoff_task.c  LIP_cartWorker_task.c  LIP_communication_task.c  LIP_console.c  LIP_console_task.c  LIP_controller_1_FSF_downpo_task.c  LIP_controller_2_FSF_downpos_task.c  LIP_controller_3_FSF_downpos_task.c  LIP_controller_4_I_FSF_downpos_task.c  LIP_controller_5_FSF_uppos_task.c  LIP_controller_FSF.c  LIP_raw_communication_task.c  LIP_start_task.c  LIP_state_estim_task.c  LIP_states_and_common.c  LIP_swingup_task.c  LIP_task_bounceoff.c  LIP_task_cartWorker.c  LIP_task_communication.c  LIP_task_console.c  LIP_task_controller_3_FSF_downpos.c  LIP_task_controller_4_I_FSF_downpos.c  LIP_task_controller_5_FSF_uppos.c  LIP_task_controller_6_I_FSF_uppos.c  LIP_task_ctrl_downposition.c  LIP_task_ctrl_upposition.c  LIP_task_raw_communication.c  LIP_task_swingdown.c  LIP_task_swingup.c  LIP_task_test.c  LIP_task_util.c  LIP_task_watchdog.c  LIP_tasks_common.c  LIP_util_task.c  LIP_watchdog_task.c  LIP_worker_task.c  LP_filter.c  SP_filter.c  (+10 more)
build_make/: makefile
build_podman/: Containerfile
